# prohlatype

./: .gitignore  .merlin  .ocamlinit  .travis.yml  30767M_new2.tsv  CHANGES.md  Dockerfile  LICENSE.md  Makefile  README.md  _tags  dune-project  graph.ml  init.ml  parser.ml  prohlatype.opam  snapshot.txt  test.ml
2016-10-05-graphs/: A_nuc.dot  B_nuc.dot  C_nuc.dot  DMB_gen.dot  DOA_nuc.dot  DPA1_nuc.dot  DPB1_nuc.dot  DQA1_nuc.dot  DRA_gen.dot  DRB1_gen.dot  DRB3_gen.dot  DRB4_gen.dot  E_nuc.dot  F_gen.dot  HFE_gen.dot  J_gen.dot  K_nuc.dot  MICA_gen.dot  MICA_nuc.dot  TAP2_nuc.dot  Y_nuc.dot
demo/: demo.dot
graph_snapshots/2016-10-05/: A_gen.dot  B_gen.dot  C_gen.dot  DMB_nuc.dot  DOB_gen.dot  DOB_nuc.dot  DPB1_gen.dot  DPB2_gen.dot  DPB2_nuc.dot  DQA1_gen.dot  DQB1_gen.dot  DQB1_nuc.dot  DRA_nuc.dot  DRB_nuc.dot  E_gen.dot  F_nuc.dot  G_nuc.dot  H_gen.dot  H_nuc.dot  J_nuc.dot  L_gen.dot  L_nuc.dot  MICB_gen.dot  MICB_nuc.dot  TAP1_gen.dot  TAP2_gen.dot  Y_gen.dot
graph_snapshots/2016-10-19/: A_gen.dot  A_nuc.dot  B_gen.dot  B_nuc.dot  C_gen.dot  C_nuc.dot  DMA_gen.dot  DMA_nuc.dot  DOA_gen.dot  DPA1_gen.dot  DPA1_nuc.dot  DPB1_gen.dot  DPB1_nuc.dot  DQA1_gen.dot  DQA1_nuc.dot  DQB1_gen.dot  DQB1_nuc.dot  DRB1_gen.dot  DRB_nuc.dot  E_gen.dot  E_nuc.dot  G_gen.dot  G_nuc.dot  HFE_nuc.dot  K_gen.dot  MICA_nuc.dot  P_gen.dot  TAP1_nuc.dot  V_gen.dot  V_nuc.dot
regression_tests/: A_gen_w0.dot  A_gen_w1.dot  A_gen_w10.dot  A_gen_w104.dot  A_gen_w2.dot  A_gen_w20.dot  A_gen_w3.dot  A_gen_w4.dot  A_gen_w45.dot  A_gen_w5.dot  A_gen_w8.dot  dot_md5.txt  ref_vs0204_vs0301.dot
rgr/: round_trip_full_results.txt
src/app/: README  align2fasta.ml  allele_distances.ml  benchmark_common.ml  benchmark_full.ml  benchmark_single.ml  cli.ml  common_options.ml  dune  explore_alignment.ml  jbuild  mhc2gpdf.ml  mpjson2coverage.ml  mpjson2tsv.ml  multi_par.ml  par_type.ml  time_phmm.ml  type.ml  viterbi.ml
src/cli_lib/: cmdline_options.ml  dune  jbuild
tools/: Dockerfile  release_static_binaries.sh  static_patch  test_for_coverage.sh  test_reads.fastq  travis_ci_test.sh
(+151 files in other folders)
