opam-version: "1.2"
maintainer: "Leonid Rozenberg <leonidr@gmail.com>"
authors: "Leonid Rozenberg <leonidr@gmail.com>"
homepage: "https://github.com/hammerlab/prohlatype/"
dev-repo: "git+https://github.com/hammerlab/prohlatype.git"
bug-reports: "https://github.com/hammerlab/prohlatype/issues"
license: "Apache2"

available: [ ocaml-version >= "4.06" ]

build: [
  [ "dune" "subst"] {pinned}
  [ "dune" "build" "-p" name "-j" jobs]
]

depends: [
#  "ocaml"               { >= "4.03" }
  "ocamlfind"           { build }
  "dune"            {build & >= "1.0" }
  "bisect_ppx"          { build & >= "1.3.2" }
  "ppx_deriving"        { >= "4.2.1" }
  "ppx_deriving_yojson" { >= "3.1" }
  "nonstd"              { >= "0.0.3" }
  "sosa"                { >= "0.3.0" }
  "ocamlgraph"          { >= "1.8.8" }
  "cmdliner"            { >= "1.0.2" }
  "biocaml"             { >= "0.8.0" }
  "parany"              { >= "3.0.0" }
  "ocephes"             { >= "0.8.2" }
  "re"                  { >= "1.7.3" }
  "partition_map"       { >= "0.9.0" }
]

